--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1>IA Lab</h1>
-  <h2>Le prompt</h2>
+  <h2>DeepSite</h2>
+  <ul>
+    <li><a href="deepsite/v1.html">V1 - Deepseek Chat V3</a></li>
+  </ul>
 </body>
 </html>
