--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h2>DeepSite</h2>
   <ul>
     <li><a href="deepsite/v1.html">V1 - Deepseek Chat V3</a></li>
+    <li><a href="deepsite/v2.html">V2 - Qwen</a></li>
   </ul>
 </body>
 </html>
