--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     <li><a href="deepsite/v1.html">V1 - Deepseek Chat V3</a></li>
     <li><a href="deepsite/v2.html">V2 - Qwen</a></li>
   </ul>
+  <h2>Bolt.new</h2>
+  <ul>
+    <li><a href="bolt/inedx.html">V1 - Claude 3.5 Sonnet </a></li>
+  </ul>
+
 </body>
 </html>
