--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </ul>
   <h2>Bolt.new</h2>
   <ul>
-    <li><a href="bolt/inedx.html">V1 - Claude 3.5 Sonnet </a></li>
+    <li><a href="bolt/v1/index.html">V1 - Claude 3.5 Sonnet </a></li>
   </ul>
 
 </body>
