--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
 </head>
 <body>
   <h1>IA Lab</h1>
-  <h2>DeepSite</h2>
+  <h2>DeepSite V1</h2>
   <ul>
     <li><a href="deepsite/v1.html">V1 - Deepseek Chat V3</a></li>
     <li><a href="deepsite/v2.html">V2 - Qwen</a></li>
   </ul>
+<h2>DeepSite V2</h2>
+  <ul>
+    <li><a href="deepsite%20v2/index.html">DeepSeek-R1-0528</a></li>
+  </ul>
+    
   <h2>Bolt.new</h2>
   <ul>
     <li><a href="bolt/v1/index.html">V1 - Claude 3.5 Sonnet </a></li>
