--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <ul>
     <li><a href="deepsite%20v2/index.html">DeepSeek-R1-0528</a></li>
   </ul>
+<h2>DeepSeek</h2>
+  <ul>
+    <li><a href="deepeek/test1.html">DeepSeek-R1-0528</a></li>
+  </ul>
+
+
     
   <h2>Bolt.new</h2>
   <ul>
