--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </ul>
 <h2>DeepSeek</h2>
   <ul>
-    <li><a href="deepeek/index.html">DeepSeek-R1-0528</a></li>
+    <li><a href="deepseek/index.html">DeepSeek-R1-0528</a></li>
   </ul>
 
 
